# GPGPU

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark.sh  build.sh  execute_code.sh  profiling.sh  shell.nix
profiler/: analyse.csv  bench_mark.ipynb  bench_mark.py  clean_benchmark.csv  clean_benchmark_GPU_naive.csv  get_time.py
src/: filter_impl.cpp  filter_impl.cu  filter_impl.h  gstcudafilter.c
src/extract_background/: lab_space  lab_space.cpp
src/implem_cpp/: background_update.cpp  background_update.hh  hysteresis.cpp  hysteresis.hh  lab.cpp  lab.hh  mask.cpp  mask.hh  remove_noise.cpp  remove_noise.hh  utils.hh
src/implem_cuda/: background_update_cuda.cu  background_update_cuda.cuh  hysterisis_cuda.cu  hysterisis_cuda.cuh  lab_cuda.cu  lab_cuda.cuh  mask_cuda.cu  mask_cuda.cuh  remove_noise_cuda.cu  remove_noise_cuda.cuh
src/run_main/: Makefile  histerisis.cpp  histerisis.hh  lab_space.cpp  lab_space.hh  main  main.cpp  mask.cpp  mask.hh  remove_noise.cpp  remove_noise.hh  tools.cpp  tools.hh
